change input type

--- a/html/hangman.html
+++ b/html/hangman.html
@@ -86,7 +86,7 @@
         <div class="setting">
           Number of characters:
           <!-- input box -->
-          <input type="number" class="num_of_chars_box" id="num_of_chars_box" placeholder="7" />
+          <input type="text" class="num_of_chars_box" id="num_of_chars_box" placeholder="7" />
         </div>
 
         <div class="setting">
