--- a/html/hangman.html
+++ b/html/hangman.html
@@ -107,7 +107,7 @@
           </select>
         </div> -->
 
-        <button class="start_game_button" onclick="startGame()">Start Game</button>
+        <button class="button" onclick="startGame()">Start Game</button>
       </div>
 
       <div class="display">
@@ -139,9 +139,9 @@
         <p id="entropy">0</p>
       </div>
 
-      <p class="guess" id="guess">Guess:  _ </p>
+      <p class="guess" id="guess">Next guess:  _ </p>
       
-      <button class="guess_button" onclick="guessNext()">Guess next character</button>
+      <button class="button" onclick="guessNext()">Guess</button>
     </div>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
