dark mode for display

--- a/html/hangman.html
+++ b/html/hangman.html
@@ -104,7 +104,7 @@
         </div>
       </div>
 
-      <p class="dt hide_at_start" id="dt"><span> Display</span></p>
+      <p class="dt hide_at_start" id="dt2"><span> Display</span></p>
 
       <div class="display hide_at_start">
         <button class="letter" id="letter1" onclick="replaceLetter('1')">_</button>
@@ -124,7 +124,7 @@
         <button class="letter" id="letter15" onclick="replaceLetter('15')">_</button>
       </div>
 
-      <p class="dt hide_at_start" id="dt2"><span> Performance </span></p>
+      <p class="dt hide_at_start" id="dt3"><span> Performance </span></p>
 
       <div class="guess_and_cost">
         <div class="game_status_and_guess hide_at_start">
