--- a/html/hangman.html
+++ b/html/hangman.html
@@ -100,7 +100,7 @@
         </div>
 
         <div class="setting">
-          <button class="button" onclick="startGame()">Start Game</button>
+          <button class="button" id="start-button" onclick="startGame()">Start Game</button>
         </div>
       </div>
 
@@ -141,7 +141,7 @@
           <p class="guess hide_at_start" id="guess">Guess: _ </p>
 
         </div>
-        <button class="button hide_at_start" onclick="guessNext()">Guess</button>
+        <button class="button hide_at_start" id="guess-button" onclick="guessNext()">Guess</button>
       </div>
 
     </div>
