--- a/html/hangman.html
+++ b/html/hangman.html
@@ -87,7 +87,7 @@
       <div class="settings">
         <div class="setting">
           <p>Number of characters: </p>
-          <input type="text" class="num_of_chars_box" id="num_of_chars_box" placeholder="7" />
+          <input type="text" inputmode="numeric" class="num_of_chars_box" id="num_of_chars_box" placeholder="7" />
         </div>
 
         <div class="setting">
