--- a/html/contact.html
+++ b/html/contact.html
@@ -42,7 +42,8 @@
           <div id="myDropdown" class="dropdown-content">
             <a href="/html/merajpt.html">merajpt</a>
             <a href="/movie/movie.html">movie</a>
-            <a href="/html/life.html">life</a>
+            <!-- <a href="/html/life.html">life</a> -->
+            <a href="/html/sdr.html">sdr</a>
             <a href="/html/hangman.html">hangman</a>
           </div>
         </div>
@@ -69,7 +70,8 @@
         <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
         <a href="/html/merajpt.html" class="mobile">merajpt</a>
         <a href="/movie/movie.html" class="mobile">movie</a>
-        <a href="/html/life.html" class="mobile">life</a>
+        <!-- <a href="/html/life.html" class="mobile">life</a> -->
+        <a href="/html/sdr.html" class="mobile">sdr</a>
         <a href="/html/hangman.html">hangman</a>
         <a href="/html/enigma.html" class="mobile">enigma</a>
         <a href="/html/contact.html" class="mobile">contact</a>
