change the text

--- a/html/sdr.html
+++ b/html/sdr.html
@@ -87,7 +87,7 @@
           radio frequencies. Sure you can do boring things like listening to FM radio or tracking airplanes, but you can also
           capture cool images of the Earth from weather satellites! Korea happens to have a geostationary weather satellite
           GEO-KOMPSAT 2A (GK-2A) near me that actively sends data to the ground, so I decided to give it a try. The weather satellites
-          usually work at very high frequencies with very weak signals, so it is a challenging task to capture them properly. This short
+          usually work at very high frequencies with very weak signals, so it is a challenging task to capture them properly without specialized tools. This short
           post walks you through my setup and the process of capturing the images. Feel free to reach out to me for more technical details.
         </p>
       </section>
