--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <section class="content profile">
         <div class="profile-description">
           <p>
-            I am a first year Master's student of Mechanical Engineering at
+            I am a second year Master's student of Mechanical Engineering at
             Ulsan National Institute of Science and Technology (UNIST), where I
             also completed my Bachelor's Degree in Mechanical Engineering and
             Computer Science & Engineering.
@@ -109,10 +109,10 @@
             one Gold medals in the span of 2 years.
           </p>
           <p>
-            I am currently working on reinforcement learning and its
-            applications on robot autonomy. I have a broad interest in various
-            topics, so please feel free to reach out for potential projects or
-            collaborations!
+            I am currently working on the safety and reliability of sequential 
+            decision making algorithms (RL/IL) and their applications to robot 
+            autonomy. I have a broad interest in various topics, so please feel 
+            free to reach out for potential projects or collaborations!
           </p>
         </div>
 
