--- a/index.html
+++ b/index.html
@@ -119,5 +119,8 @@
         <img src="/img/image.jpeg" alt="Meraj Mammadov" />
       </section>
     </div>
+    <footer class="footer">
+      <p>&copy; 2024 Meraj Mammadov</p>
+    </footer>
   </body>
 </html>
