--- a/html/contact.html
+++ b/html/contact.html
@@ -134,5 +134,8 @@
         <p>gmail: meraccos</p>
       </section>
     </div>
+    <footer class="footer">
+      <p>&copy; 2024 Meraj Mammadov</p>
+    </footer>
   </body>
 </html>
