--- a/html/life.html
+++ b/html/life.html
@@ -120,5 +120,8 @@
         ></dotlottie-player>
       </section>
     </div>
+    <footer class="footer">
+      <p>&copy; 2024 Meraj Mammadov</p>
+    </footer>
   </body>
 </html>
