--- a/html/sdr.html
+++ b/html/sdr.html
@@ -131,5 +131,8 @@
         out to me if you would like to know more about the setup or the process.
       </section>
     </div>
+    <footer class="footer">
+      <p>&copy; 2024 Meraj Mammadov</p>
+    </footer>
   </body>
 </html>
