--- a/movie/movie.html
+++ b/movie/movie.html
@@ -235,6 +235,9 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <p>&copy; 2024 Meraj Mammadov</p>
+    </footer>
 </body>
 
 </html>
