fix the missing /div

--- a/html/hangman.html
+++ b/html/hangman.html
@@ -145,8 +145,9 @@
         </div>
 
       </div>
-      <footer class="footer">
-        <p>&copy; 2024 Meraj Mammadov</p>
-      </footer>
+    </div>
+    <footer class="footer">
+      <p>&copy; 2024 Meraj Mammadov</p>
+    </footer>
   </body>
 </html>
