--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    <div class="container" id="container">
+    <header>
       <h1><a href="/index.html">Meraj Mammadov</a></h1>
       <nav class="nav">
 
@@ -42,7 +42,6 @@
           <div id="myDropdown" class="dropdown-content">
             <a href="/html/merajpt.html">merajpt</a>
             <a href="/movie/movie.html">movie</a>
-            <!-- <a href="/html/life.html">life</a> -->
             <a href="/html/sdr.html">sdr</a>
             <a href="/html/hangman.html">hangman</a>
           </div>
@@ -63,23 +62,19 @@
         </div>
       </nav>
 
-
       <div class="mobile-menu" style="display: none;">
         <a href="/index.html" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-        <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
         <a href="/html/merajpt.html" class="mobile">merajpt</a>
         <a href="/movie/movie.html" class="mobile">movie</a>
-        <!-- <a href="/html/life.html" class="mobile">life</a> -->
         <a href="/html/sdr.html" class="mobile">sdr</a>
         <a href="/html/hangman.html">hangman</a>
         <a href="/html/enigma.html" class="mobile">enigma</a>
         <a href="/html/contact.html" class="mobile">contact</a>
       </div>
+    </header>
 
-
-
-
+    <main>
       <section class="content profile">
         <div class="profile-description">
           <p>
@@ -99,9 +94,7 @@
             Thermodynamics Laboratory (ITEL) with Professor
             <a
               href="https://scholar.google.co.kr/citations?user=1JpaQ-QAAAAJ&hl=en"
-              >Jaeseon Lee</a
-            >
-            .
+              >Jaeseon Lee</a>.
           </p>
           <p>
             I have also participated in several national and international
@@ -116,9 +109,9 @@
           </p>
         </div>
 
-        <img src="/img/image.jpeg" alt="Meraj Mammadov" />
+        <img src="/img/image.jpeg" alt="Meraj Mammadov"/>
       </section>
-    </div>
+    </main>
     <footer class="footer">
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
