simplified profile structure

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </header>
 
     <main>
-      <section class="content profile">
-        <div class="profile-description">
+      <div class="profile">
+        <div class="content">
           <p>
             I am a second year Master's student of Mechanical Engineering at
             Ulsan National Institute of Science and Technology (UNIST), where I
@@ -108,9 +108,8 @@
             free to reach out for potential projects or collaborations!
           </p>
         </div>
-
         <img src="/img/image.jpeg" alt="Meraj Mammadov"/>
-      </section>
+      </div>
     </main>
     <footer class="footer">
       <p>&copy; 2024 Meraj Mammadov</p>
