no class needded for footer

--- a/html/life.html
+++ b/html/life.html
@@ -120,7 +120,7 @@
         ></dotlottie-player>
       </section>
     </div>
-    <footer class="footer">
+    <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
   </body>
