--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -151,7 +151,7 @@
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
     <script src="/js/bigram.js"></script>
     <script src="/js/lstm.js"></script>
-    <footer class="footer">
+    <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
   </body>
