--- a/html/sdr.html
+++ b/html/sdr.html
@@ -131,7 +131,7 @@
         out to me if you would like to know more about the setup or the process.
       </section>
     </div>
-    <footer class="footer">
+    <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
   </body>
