--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <img src="/img/image.jpeg" alt="Meraj Mammadov"/>
       </div>
     </main>
-    <footer class="footer">
+    <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
   </body>
