--- a/html/enigma.html
+++ b/html/enigma.html
@@ -242,7 +242,7 @@
         Gadmaliyev
       </div>
     </div>
-    <footer class="footer">
+    <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
   </body>
