--- a/movie/movie.html
+++ b/movie/movie.html
@@ -235,7 +235,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
+    <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
   </div>
