no class needed for footer

--- a/html/hangman.html
+++ b/html/hangman.html
@@ -146,7 +146,7 @@
 
       </div>
     </div>
-    <footer class="footer">
+    <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
   </body>
