--- a/html/contact.html
+++ b/html/contact.html
@@ -30,108 +30,106 @@
   </head>
 
   <body>
-    <h1><a href="/index.html">Meraj Mammadov</a></h1>
-    <nav class="nav">
+    <header>
+      <h1><a href="/index.html">Meraj Mammadov</a></h1>
+      <nav class="nav">
 
-      <a href="/index.html" class="desktop">home</a>
-      <a href="/Meraj_cv.pdf" class="desktop">cv</a>
+        <a href="/index.html" class="desktop">home</a>
+        <a href="/Meraj_cv.pdf" class="desktop">cv</a>
 
-      <div class="dropdown desktop">
-        <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="/html/merajpt.html">merajpt</a>
-          <a href="/movie/movie.html">movie</a>
-          <!-- <a href="/html/life.html">life</a> -->
-          <a href="/html/sdr.html">sdr</a>
-          <a href="/html/hangman.html">hangman</a>
+        <div class="dropdown desktop">
+          <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
+          <div id="myDropdown" class="dropdown-content">
+            <a href="/html/merajpt.html">merajpt</a>
+            <a href="/movie/movie.html">movie</a>
+            <a href="/html/sdr.html">sdr</a>
+            <a href="/html/hangman.html">hangman</a>
+          </div>
         </div>
+
+        <a href="/html/enigma.html" class="desktop">enigma</a>
+        <a href="/html/contact.html" class="desktop">contact</a>
+
+        <strong id="mobile-menu-btn" class="menu-button mobile">
+          <div class="line" style="width: 30px;"></div>
+          <div class="line" style="width: 25px;"></div>
+          <div class="line" style="width: 20px;"></div>
+        </strong>
+
+        <div class="darkmode-container" id="darkmode-container">
+          <input type="checkbox" class="dark-mode-toggle" id="dark-mode-toggle" />
+          <label for="dark-mode-toggle" id="desktop-label" class="desktop-label" style="font-size: 45px;"> &#9788 </label>
+        </div>
+      </nav>
+
+      <div class="mobile-menu" style="display: none;">
+        <a href="/index.html" class="mobile">home</a>
+        <a href="/Meraj_cv.pdf" class="mobile">cv</a>
+        <a href="/html/merajpt.html" class="mobile">merajpt</a>
+        <a href="/movie/movie.html" class="mobile">movie</a>
+        <a href="/html/sdr.html" class="mobile">sdr</a>
+        <a href="/html/hangman.html">hangman</a>
+        <a href="/html/enigma.html" class="mobile">enigma</a>
+        <a href="/html/contact.html" class="mobile">contact</a>
       </div>
+    </header>
+    
+    <main>
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      />
+      <br />
+      <section class="content">
+        <p>
+          Whether you are interested in potential collaborations, have questions
+          about my work, or simply wish to connect, I would love to hear from
+          you. Please use the following channels to get in touch:
+        </p>
+      </section>
 
-      <a href="/html/enigma.html" class="desktop">enigma</a>
-      <a href="/html/contact.html" class="desktop">contact</a>
+      <section class="animation" id="dark-animation">
+        <script
+          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+          type="module"
+        ></script>
 
-      <strong id="mobile-menu-btn" class="menu-button mobile">
-        <div class="line" style="width: 30px;"></div>
-        <div class="line" style="width: 25px;"></div>
-        <div class="line" style="width: 20px;"></div>
-      </strong>
+        <dotlottie-player
+          src="https://lottie.host/7656dc4c-aa54-406f-8b8c-7213eba5ee42/tEP5Lw0tMt.json"
+          background="transparent"
+          speed="1"
+          style="width: 300px; height: 300px"
+          loop
+          autoplay
+        ></dotlottie-player>
+      </section>
+      <section class="animation" id="white-animation">
+        <script
+          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+          type="module"
+        ></script>
 
-      <div class="darkmode-container" id="darkmode-container">
-        <input type="checkbox" class="dark-mode-toggle" id="dark-mode-toggle" />
-        <label for="dark-mode-toggle" id="desktop-label" class="desktop-label" style="font-size: 45px;"> &#9788 </label>
-      </div>
-    </nav>
+        <dotlottie-player
+          src="https://lottie.host/d2ad4f05-f866-4ea8-99ba-a288dccd74af/RJVQTO3S5M.json"
+          background="transparent"
+          speed="1"
+          style="width: 300px; height: 300px"
+          loop
+          autoplay
+        ></dotlottie-player>
+      </section>
 
-
-    <div class="mobile-menu" style="display: none;">
-      <a href="/index.html" class="mobile">home</a>
-      <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-      <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
-      <a href="/html/merajpt.html" class="mobile">merajpt</a>
-      <a href="/movie/movie.html" class="mobile">movie</a>
-      <!-- <a href="/html/life.html" class="mobile">life</a> -->
-      <a href="/html/sdr.html" class="mobile">sdr</a>
-      <a href="/html/hangman.html">hangman</a>
-      <a href="/html/enigma.html" class="mobile">enigma</a>
-      <a href="/html/contact.html" class="mobile">contact</a>
-    </div>
-
-
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <br />
-    <section class="content">
-      <p>
-        Whether you are interested in potential collaborations, have questions
-        about my work, or simply wish to connect, I would love to hear from
-        you. Please use the following channels to get in touch:
-      </p>
-    </section>
-
-    <section class="animation" id="dark-animation">
-      <script
-        src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
-        type="module"
-      ></script>
-
-      <dotlottie-player
-        src="https://lottie.host/7656dc4c-aa54-406f-8b8c-7213eba5ee42/tEP5Lw0tMt.json"
-        background="transparent"
-        speed="1"
-        style="width: 300px; height: 300px"
-        loop
-        autoplay
-      ></dotlottie-player>
-    </section>
-    <section class="animation" id="white-animation">
-      <script
-        src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
-        type="module"
-      ></script>
-
-      <dotlottie-player
-        src="https://lottie.host/d2ad4f05-f866-4ea8-99ba-a288dccd74af/RJVQTO3S5M.json"
-        background="transparent"
-        speed="1"
-        style="width: 300px; height: 300px"
-        loop
-        autoplay
-      ></dotlottie-player>
-    </section>
-
-    <section class="content contact profile" id="contact">
-      <a href="https://www.github.com/meraccos"
-        ><i class="fa fa-github" style="font-size: 32px"></i
-      ></a>
-      <a href="https://www.linkedin.com/in/meraccos"
-        ><i class="fa fa-linkedin" style="font-size: 32px"></i
-      ></a>
-      <i class="fa fa-envelope" style="font-size: 32px"></i>
-      <p>gmail: meraccos</p>
-    </section>
+      <section class="content contact profile" id="contact">
+        <a href="https://www.github.com/meraccos"
+          ><i class="fa fa-github" style="font-size: 32px"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/meraccos"
+          ><i class="fa fa-linkedin" style="font-size: 32px"></i
+        ></a>
+        <i class="fa fa-envelope" style="font-size: 32px"></i>
+        <p>gmail: meraccos</p>
+      </section>
+    </main>
     <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
