--- a/html/enigma.html
+++ b/html/enigma.html
@@ -34,7 +34,7 @@
   </head>
 
   <body>
-    <div class="container" id="container">
+    <header>
       <h1><a href="/index.html">Meraj Mammadov</a></h1>
       <nav class="nav">
 
@@ -46,7 +46,6 @@
           <div id="myDropdown" class="dropdown-content">
             <a href="/html/merajpt.html">merajpt</a>
             <a href="/movie/movie.html">movie</a>
-            <!-- <a href="/html/life.html">life</a> -->
             <a href="/html/sdr.html">sdr</a>
             <a href="/html/hangman.html">hangman</a>
           </div>
@@ -67,22 +66,19 @@
         </div>
       </nav>
 
-
       <div class="mobile-menu" style="display: none;">
         <a href="/index.html" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-        <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
         <a href="/html/merajpt.html" class="mobile">merajpt</a>
         <a href="/movie/movie.html" class="mobile">movie</a>
-        <!-- <a href="/html/life.html" class="mobile">life</a> -->
         <a href="/html/sdr.html" class="mobile">sdr</a>
         <a href="/html/hangman.html">hangman</a>
         <a href="/html/enigma.html" class="mobile">enigma</a>
         <a href="/html/contact.html" class="mobile">contact</a>
       </div>
+    </header>
 
-
-
+    <main>
       <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -241,7 +237,7 @@
         References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda, \(^3\)Rashadat
         Gadmaliyev
       </div>
-    </div>
+    </main>
     <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
