--- a/html/hangman.html
+++ b/html/hangman.html
@@ -26,9 +26,10 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css" />
 </head>
   <body>
-    <div class="container" id="container">
+    <header>
       <h1><a href="/index.html">Meraj Mammadov</a></h1>
       <nav class="nav">
+
         <a href="/index.html" class="desktop">home</a>
         <a href="/Meraj_cv.pdf" class="desktop">cv</a>
 
@@ -37,7 +38,6 @@
           <div id="myDropdown" class="dropdown-content">
             <a href="/html/merajpt.html">merajpt</a>
             <a href="/movie/movie.html">movie</a>
-            <!-- <a href="/html/life.html">life</a> -->
             <a href="/html/sdr.html">sdr</a>
             <a href="/html/hangman.html">hangman</a>
           </div>
@@ -58,20 +58,19 @@
         </div>
       </nav>
 
-
       <div class="mobile-menu" style="display: none;">
         <a href="/index.html" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-        <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
         <a href="/html/merajpt.html" class="mobile">merajpt</a>
         <a href="/movie/movie.html" class="mobile">movie</a>
-        <!-- <a href="/html/life.html" class="mobile">life</a> -->
         <a href="/html/sdr.html" class="mobile">sdr</a>
         <a href="/html/hangman.html">hangman</a>
         <a href="/html/enigma.html" class="mobile">enigma</a>
         <a href="/html/contact.html" class="mobile">contact</a>
       </div>
+    </header>
 
+    <main>
       <br />
       <section class="content">
         <p>
@@ -143,9 +142,8 @@
           </div>
           <button class="button hide_at_start" id="guess-button" onclick="guessNext()">Guess</button>
         </div>
-
       </div>
-    </div>
+    </main>
     <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
