--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    <div class="container" id="container">
+    <header>
       <h1><a href="/index.html">Meraj Mammadov</a></h1>
       <nav class="nav">
 
@@ -42,7 +42,6 @@
           <div id="myDropdown" class="dropdown-content">
             <a href="/html/merajpt.html">merajpt</a>
             <a href="/movie/movie.html">movie</a>
-            <!-- <a href="/html/life.html">life</a> -->
             <a href="/html/sdr.html">sdr</a>
             <a href="/html/hangman.html">hangman</a>
           </div>
@@ -63,21 +62,19 @@
         </div>
       </nav>
 
-
       <div class="mobile-menu" style="display: none;">
         <a href="/index.html" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-        <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
         <a href="/html/merajpt.html" class="mobile">merajpt</a>
         <a href="/movie/movie.html" class="mobile">movie</a>
-        <!-- <a href="/html/life.html" class="mobile">life</a> -->
         <a href="/html/sdr.html" class="mobile">sdr</a>
         <a href="/html/hangman.html">hangman</a>
         <a href="/html/enigma.html" class="mobile">enigma</a>
         <a href="/html/contact.html" class="mobile">contact</a>
       </div>
-      
+    </header>
 
+    <main>
       <br />
       <p class="content">
         Here you can test some of the neural language models that I have built.
@@ -142,15 +139,16 @@
         >
           Generate
         </button>
+        </div>
+        <p id="output" class="output_box"></p>
       </div>
-      <p id="output" class="output_box"></p>
-    </div>
 
-    <script src="/js/common.js"></script>
+      <script src="/js/common.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
-    <script src="/js/bigram.js"></script>
-    <script src="/js/lstm.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
+      <script src="/js/bigram.js"></script>
+      <script src="/js/lstm.js"></script>
+    </main>
     <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
