--- a/movie/movie.html
+++ b/movie/movie.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <div class="container" id="container">
+  <header>
     <h1><a href="/index.html">Meraj Mammadov</a></h1>
     <nav class="nav">
 
@@ -39,7 +39,6 @@
         <div id="myDropdown" class="dropdown-content">
           <a href="/html/merajpt.html">merajpt</a>
           <a href="/movie/movie.html">movie</a>
-          <!-- <a href="/html/life.html">life</a> -->
           <a href="/html/sdr.html">sdr</a>
           <a href="/html/hangman.html">hangman</a>
         </div>
@@ -60,20 +59,19 @@
       </div>
     </nav>
 
-
     <div class="mobile-menu" style="display: none;">
       <a href="/index.html" class="mobile">home</a>
       <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-      <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
       <a href="/html/merajpt.html" class="mobile">merajpt</a>
       <a href="/movie/movie.html" class="mobile">movie</a>
-      <!-- <a href="/html/life.html" class="mobile">life</a> -->
       <a href="/html/sdr.html" class="mobile">sdr</a>
       <a href="/html/hangman.html">hangman</a>
       <a href="/html/enigma.html" class="mobile">enigma</a>
       <a href="/html/contact.html" class="mobile">contact</a>
     </div>
+  </header>
 
+  <main>
     <br />
     <section class="content">
       <p>
@@ -234,7 +232,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer>
       <p>&copy; 2024 Meraj Mammadov</p>
     </footer>
